# Home_Work_web_4

./: data.json  data_blog.json  data_catalog.json  pyproject.toml
blog/: urls.py  views.py
blog/migrations/: 0001_initial.py
blog/models/: blog.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
catalog/: admin.py  forms.py  services.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_delete_student_alter_category_options_and_more.py  0003_rename_picture_product_image.py  0004_alter_product_description.py  0005_alter_product_description.py  0006_alter_product_image.py
catalog/models/: category.py  products.py  version.py
catalog/templates/catalog/: base.html  categories.html  contacts.html  home.html  home_confirm_delete.html  home_list.html  product_confirm_delete.html  product_form.html  version_list.html
catalog/templatetags/: mediapath_filter.py  mediapath_tag.py
config/: settings.py  urls.py
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: activate_user.html  login.html  register.html  user_form.html
